Update profile: change to Aspiring Data Analyst and remove Angular

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <h1 class="hero-title">R V S Manideep</h1>
-            <p class="hero-subtitle">Full-Stack Developer | AI/ML Enthusiast | Cloud Engineer</p>
-            <p class="hero-description">Building scalable solutions with Angular, Python, and Cloud technologies</p>
+            <p class="hero-subtitle">Aspiring Data Analyst</p>
+            <p class="hero-description">Building scalable solutions with Python, and Cloud technologies</p>
             <div class="hero-buttons">
                 <a href="#projects" class="btn btn-primary">View My Work</a>
                 <a href="https://github.com/manideep-eca" target="_blank" class="btn btn-secondary"><i class="fab fa-github"></i> GitHub</a>
@@ -43,7 +43,6 @@
                 <div class="skill-category">
                     <h3>Frontend</h3>
                     <div class="skill-tags">
-                        <span class="skill-tag">Angular</span>
                         <span class="skill-tag">TypeScript</span>
                         <span class="skill-tag">HTML/CSS</span>
                         <span class="skill-tag">JavaScript</span>
