Add Random Number Guesser and Secure Password Generator projects

--- a/index.html
+++ b/index.html
@@ -97,6 +97,34 @@
                         <span>CNN</span>
                     </div>
                 </div>
+                
+			<div class="project-card">
+				<div class="project-header">
+					<h3>Random Number Guesser</h3>
+					<span class="project-tag">Java</span>
+				</div>
+				<p class="project-description">A number guessing game showcasing algorithmic logic and conditional programming. Implemented loops, user input handling, and feedback logic for interactive play. Delivered within a short timeframe demonstrating agile methodology and time management.</p>
+				<div class="project-tech">
+					<span>Java</span>
+					<span>Loops</span>
+					<span>Conditionals</span>
+					<span>User Input Handling</span>
+				</div>
+			</div>
+                
+			<div class="project-card">
+				<div class="project-header">
+					<h3>Secure Password Generator</h3>
+					<span class="project-tag">Python</span>
+				</div>
+				<p class="project-description">A custom tool for generating encrypted, secure passwords using user-defined parameters. Increased security robustness by implementing complexity rules and validation logic to ensure password strength and compliance.</p>
+				<div class="project-tech">
+					<span>Python</span>
+					<span>Encryption</span>
+					<span>Security</span>
+					<span>Validation</span>
+				</div>
+			</div>
 
                 </div>
 
