Add Professional Experience section

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <ul class="nav-menu">
                 <li><a href="#home" class="nav-link active">Home</a></li>
                 <li><a href="#projects" class="nav-link">Projects</a></li>
+				 <li><a href="#professional" class="nav-link">Professional</a></li>
                 <li><a href="#about" class="nav-link">About</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
@@ -134,6 +135,29 @@
             </div>
         </div>
     </section>
+
+	 <!-- Professional Section -->
+	 <section id="professional" class="professional">
+		   <div class="container">
+			       <h2 class="section-title">Professional Experience</h2>
+			       <div class="professional-items">
+					         <div class="professional-item">
+								         <div class="professional-header">
+											           <h3>Full Stack Developer Intern</h3>
+											           <p class="professional-company">Desire AI | 2024 - Present</p>
+											         </div>
+								         <p class="professional-description">Developed and maintained full-stack web applications using Angular, TypeScript, and PostgreSQL. Implemented responsive UI components, REST APIs, and deployed applications to Google Cloud Platform.</p>
+								       </div>
+					         <div class="professional-item">
+								         <div class="professional-header">
+											           <h3>AI/ML Intern</h3>
+											           <p class="professional-company">Research Lab | 2023 - 2024</p>
+											         </div>
+								         <p class="professional-description">Developed deep learning models for image classification using TensorFlow and CNNs. Conducted data analysis, performed model optimization, and achieved 18% improvement in accuracy through transfer learning techniques.</p>
+								       </div>
+					       </div>
+			     </div>
+		  </section>
 
     <!-- About Section -->
     <section id="about" class="about">
