Update Professional Experience section with new job entries

--- a/index.html
+++ b/index.html
@@ -141,21 +141,21 @@
 		   <div class="container">
 			       <h2 class="section-title">Professional Experience</h2>
 			       <div class="professional-items">
+
 					         <div class="professional-item">
 								         <div class="professional-header">
-											           <h3>Full Stack Developer Intern</h3>
-											           <p class="professional-company">Desire AI | 2024 - Present</p>
+											           <h3>AI Research Intern</h3>
+											           <p class="professional-company">Apollo Clinical AI | May 2024 to June 2024</p>
 											         </div>
-								         <p class="professional-description">Developed and maintained full-stack web applications using Angular, TypeScript, and PostgreSQL. Implemented responsive UI components, REST APIs, and deployed applications to Google Cloud Platform.</p>
+								         <p class="professional-description">Managed and organized 10,000+ dermatological images on Google Cloud to support ML-based clinical analysis. Improved workflow efficiency through accurate data labeling and effective cross-team collaboration.</p>
 								       </div>
 					         <div class="professional-item">
 								         <div class="professional-header">
-											           <h3>AI/ML Intern</h3>
-											           <p class="professional-company">Research Lab | 2023 - 2024</p>
+											           <h3>Artificial Intelligence Intern</h3>
+											           <p class="professional-company">EPSoft Solutions Pvt Ltd | May-June 2025</p>
 											         </div>
-								         <p class="professional-description">Developed deep learning models for image classification using TensorFlow and CNNs. Conducted data analysis, performed model optimization, and achieved 18% improvement in accuracy through transfer learning techniques.</p>
+								         <p class="professional-description">Explored AI technologies and created AI vectors using Pinecone. Learned about resume parsing and various AI applications in modern software solutions.</p>
 								       </div>
-					       </div>
 			     </div>
 		  </section>
 
