Update internships count from 3+ to 2

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     </div>
                     <div class="about-stat">
                         <strong>Internships</strong>
-                        <span>3+</span>
+                        <span>2</span>
                     </div>
                     <div class="about-stat">
                         <strong>Certifications</strong>
