Change name from RVS Manideep to R Venkata Sai Manideep

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>R V S Manideep - Portfolio & Dashboard</title>
+    <title>R Venkata Sai Manideep - Portfolio & Dashboard</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -25,7 +25,7 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1 class="hero-title">R V S Manideep</h1>
+            <h1 class="hero-title">R Venkata Sai Manideep</h1>
             <p class="hero-subtitle">Aspiring Data Analyst</p>
             <p class="hero-description">Building scalable solutions with Python, and Cloud technologies</p>
             <div class="hero-buttons">
@@ -226,7 +226,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <p>&copy; 2024 R V S Manideep. All rights reserved.</p>
+        <p>&copy; 2024 R Venkata Sai Manideep. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
